--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Git & Git-Hub</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis vitae quod magni tempora laboriosam quibusdam rerum magnam odio ullam, non voluptas illum obcaecati excepturi repellat accusamus labore eos sint sequi!</p>
 </body>
 </html>
